# savvy

./: .Rbuildignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESCRIPTION  LICENSE.md  NAMESPACE  README.Rmd  README.md  README.qmd  build.rs  dist-workspace.toml  tmp.rs  wrapper.h
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: R-CMD-check.yaml  check-non-api.yaml  docs.yml  generate_pkg.yml  msrv.yaml  release.yml  release_aarch64-linux.yml  wasm.yaml  wasm_and_arm64.yaml
R/: extendr-wrappers.R  wrappers.R  zzz.R
R-package/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  bootstrap.R  configure  configure.win
R-package/R/: 000-wrappers.R  savvy-package.R  unextendr-package.R  wrappers.R
R-package/man/: Foo.Rd  FooEnum.Rd  Person.Rd  add_suffix.Rd  flip_logical.Rd  or_logical.Rd  print_list.Rd  reverse_bit_scalar.Rd  reverse_bits.Rd  savvy-package.Rd  times_any_int.Rd  times_any_numeric.Rd  times_two_int.Rd  times_two_numeric.Rd  times_two_real.Rd  to_upper.Rd  unextendr-package.Rd  wrappers.Rd
R-package/src/: Makevars  Makevars webr  Makevars.in  Makevars.webr  Makevars.win  Makevars.win.in  init.c  savvyExamples-win.def
R-package/src/rust/: Cargo.toml  api.h  cbindgen.toml
R-package/src/rust/.cargo/: config.toml
R-package/src/rust/src/: altrep.rs  array.rs  attributes.rs  complex.rs  consuming_type.rs  convert_from_rust_types.rs  enum_support.rs  environment.rs  error_handling.rs  escape.rs  function.rs  init_vectors.rs  lib.rs  log.rs  missing_values.rs  mod3_ignored  multiple_defs.rs  numeric.rs  obj.rs  optional_arg.rs  scalar.rs  separate_impl_definition.rs  try_from.rs  try_from_iter.rs  unwind.rs
R-package/src/rust/src/mod1/: mod.rs
R-package/src/rust/src/mod1/mod1_1/: mod.rs  mod_1_1_foo.rs
R-package/src/rust/src/mod2_ignored/: mod.rs
R-package/tests/: testthat.R
R-package/tests/testthat/: test-altrep.R  test-array.R  test-attributes.R  test-complex.R  test-consuming_types.R  test-custom-type.R  test-enum.R  test-environment.R  test-error_handling.R  test-from-rust-types.R  test-function.R  test-impls_over_multiple_files.R  test-numeric.R  (+11 more)
book/: book.toml  custom.css  zensical.toml
book/src/: 00_intro.md  01_get_started.md  02_key_ideas.md  03_savvy_macro.md  04_input.md  05_output.md  06_scalar.md  08_atomic_types.md  09_list.md  10_struct.md  11_error.md  12_attributes.md  13_data_frames.md  13_matrix.md  14_factor.md  15_matrix.md  SUMMARY.md  advanced_topics.md  altrep.md  atomic_types.md  attributes.md  enum.md  error.md  extendr.md  factor.md  get_started.md  index.md  initialization_routine.md  input.md  key_ideas.md  linkage.md  list.md  matrix.md  optional_arg.md  output.md  savvy_macro.md  scalar.md  struct.md  test.md  type-overview.md
docs/: design.md
man/: static_string.Rd  string.Rd  unextendr-package.Rd  wrappers.Rd
rbindgen/: Cargo.toml
rbindgen/src/: main.rs
rlang-ffi-lite/: Cargo.toml
rlang-ffi-lite/src/: lib.rs
savvy/: Cargo.toml  README.md  build.rs
savvy-bindgen/: Cargo.toml  README.md
savvy-bindgen/src/: lib.rs  main.rs  parse_file.rs  savvy_fn.rs  savvy_impl.rs  savvy_struct.rs  utils.rs
savvy-bindgen/src/codegen/: mod.rs  r.rs  rust.rs  static_files.rs
savvy-bindgen/src/codegen/templates/: Cargo_toml  Makevars.in  Makevars.win.in  config_toml  configure  configure.win  gitignore
savvy-bindgen/src/ir/: mod.rs  savvy_enum.rs  savvy_fn.rs  savvy_impl.rs  savvy_init_fn.rs  savvy_struct.rs
savvy-bindgen/src/parse/: mod.rs  savvy_enum.rs  savvy_fn.rs  savvy_impl.rs  savvy_struct.rs
savvy-cli/: Cargo.toml  README.md
savvy-cli/src/: main.rs  parse_manifest.rs  utils.rs
savvy-ffi/: Cargo.toml  README.md  build.rs
savvy-ffi/src/: altrep.rs  external.rs  lib.rs  mock.rs
savvy-ffi/src/backports/: altrep_class.c
savvy-macro/: Cargo.toml  README.md
savvy-macro/src/: lib.rs
savvy-macro/src/snapshots/: savvy_macro__tests__assert_snapshot_ffi-2.snap  savvy_macro__tests__assert_snapshot_ffi-3.snap  savvy_macro__tests__assert_snapshot_ffi.snap  savvy_macro__tests__assert_snapshot_ffi_impl-2.snap  savvy_macro__tests__assert_snapshot_ffi_impl-3.snap  savvy_macro__tests__assert_snapshot_ffi_impl-4.snap  savvy_macro__tests__assert_snapshot_ffi_impl.snap  savvy_macro__tests__assert_snapshot_inner-2.snap  savvy_macro__tests__assert_snapshot_inner-3.snap  savvy_macro__tests__assert_snapshot_inner-4.snap  savvy_macro__tests__assert_snapshot_inner.snap  savvy_macro__tests__assert_snapshot_outer-2.snap  savvy_macro__tests__assert_snapshot_outer-3.snap  savvy_macro__tests__assert_snapshot_outer.snap  savvy_macro__tests__assert_snapshot_outer_impl-2.snap  savvy_macro__tests__assert_snapshot_outer_impl-3.snap  savvy_macro__tests__assert_snapshot_outer_impl-4.snap  savvy_macro__tests__assert_snapshot_outer_impl.snap
savvy-macro/tests/: trybuild.rs
savvy-macro/tests/cases/: simple_cases.rs  simple_cases.stderr
savvy/docs/: design.md
savvy/src/: error.rs  io.rs  lib.rs  protect.rs  unwind_protect.rs  unwind_protect_wrapper.c
savvy/src/sexp/: external_pointer.rs  integer.rs  list.rs  logical.rs  mod.rs  na.rs  null.rs  real.rs  scalar.rs  string.rs
src/: .gitignore  Makevars  Makevars.win  altrep.rs  entrypoint.c  error.rs  eval.rs  eval_parse_text.rs  ffi.rs  init.c  io.rs  lib.rs  log.rs  panic_hook.rs  protect.rs  unextendr-win.def  unwind_protect.rs  unwind_protect_fake.c  unwind_protect_wrapper.c
src/altrep/: altinteger.rs  altlist.rs  altlogical.rs  altraw.rs  altreal.rs  altstring.rs  mod.rs
src/rust/: Cargo.toml  api.h
src/sexp/: complex.rs  environment.rs  external_pointer.rs  function.rs  integer.rs  list.rs  logical.rs  mod.rs  na.rs  null.rs  numeric.rs  obj.rs  raw.rs  real.rs  scalar.rs  string.rs  utils.rs
tests/: testthat.R
unextendr/: Cargo.toml  build.rs
unextendr-bindgen/: Cargo.toml
unextendr-bindgen/src/: lib.rs  main.rs  unextendr_fn.rs  unextendr_impl.rs  utils.rs
unextendr-macro/: Cargo.toml
unextendr-macro/src/: lib.rs
unextendr/src/: error.rs  lib.rs  protect.rs  unwind_protect.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+39 files in other folders)
