[package]
name = "savvy"
description = "A simple R extension interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
exclude = ["/book", "/R-package", "README.qmd"]

[dependencies]
savvy-ffi = { version = "0", path = "./savvy-ffi" }
savvy-macro = { version = "0", path = "./savvy-macro" }
once_cell = "1"

[build-dependencies]
cc = "1"

[features]
fake-libR = ["savvy-ffi/fake-libR"]

[workspace.metadata.release]
tag = false # do not create tags for individual crates (e.g. "savvy-cli-v0.2.5")

[package.metadata.release]
tag = true # create a single tag for the version (e.g. "v0.2.5")
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] (ReleaseDate)\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/yutannihilation/savvy/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[package.metadata.dist]
dist = false

[workspace]
members = ["savvy-macro", "savvy-bindgen", "savvy-cli", "savvy-ffi", "xtask"]
resolver = "2"

[workspace.package]
version = "0.2.15"
edition = "2021"
authors = ["Hiroaki Yutani"]
license = "MIT"
repository = "https://github.com/yutannihilation/savvy/"
homepage = "https://github.com/yutannihilation/savvy/guide/"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci"]

# Use custom runner for Arm64 build
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
