[package]
name = "savvy-bindgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
