[package]
name = "savvy-cli"
description = "A CLI for savvy framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

# clap requires 1.74
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
savvy-bindgen = { version = "0", path = "../savvy-bindgen" }
walkdir = "2"

[package.metadata.dist]
dist = true
