[package]
name = "savvy-cli"
description = "A CLI for savvy framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

# clap requires 1.74
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
async-process = "2"
futures-lite = "2"

savvy-bindgen = { version = "0.6.6", path = "../savvy-bindgen", features = [
    "use_formatter",
] }
dirs = "5"
toml = "0.8"

[package.metadata.dist]
dist = true
