[package]
name = "savvy-cli"
description = "A CLI for savvy framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

# PanicHookInfo is introduced in 1.81
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
async-process = "2"
futures-lite = "2"

savvy-bindgen = { version = "0.8.12", path = "../savvy-bindgen", features = [
    "use_formatter",
] }
dirs = "6"
toml = "0.9"

[package.metadata.dist]
dist = true
