[package]
name = "savvy-ffi"
description = "Minimal FFI bindings for R's C API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = false

[dependencies]
num-complex = { version = "0.4.5", optional = true }

[features]
default = []
complex = ["num-complex"]
altrep = []
