[package]
name = "savvy-ffi"
description = "Minimal FFI bindings for R's C API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = false

[dependencies]
num-complex = { workspace = true, optional = true }

[build-dependencies]
cc = { workspace = true }

[features]
default = []
complex = ["num-complex"]
altrep = []
