[package]
name = "savvy"
description = "An unfriendly R extension interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
libR-sys = { version = "0", git = "https://github.com/extendr/libR-sys" }
once_cell = "1"

savvy-macro = { version = "0", path = "../savvy-macro" }

[build-dependencies]
cc = "1"
