[package]
name = "savvy"
description = "An unfriendly R extension interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
rlang-ffi-lite = { verion = "*", path = "../rlang-ffi-lite" }
once_cell = "1"

savvy-macro = { version = "0", path = "../savvy-macro" }

[build-dependencies]
cc = "1"

[package.metadata.dist]
dist = false
