[package]
name = "simple-savvy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
savvy = { path = "../../../" }
savvy-ffi = { path = "../../../savvy-ffi" }

[dev-dependencies]
savvy = { path = "../../../", features = ["fake-libR"] }
savvy-ffi = { path = "../../../savvy-ffi", features = ["fake-libR"] }

[workspace]
