[package]
name = "simple-savvy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = { path = "../../../", features = ["complex", "altrep", "logger"] }
# for calling Rf_errorcall() to test error handling
savvy-ffi = { path = "../../../savvy-ffi" }

log = "0.4"
env_logger = { version = "0.11", default-features = false }


[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery. 
# 
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
# 
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"

[workspace]
